--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -119,3 +119,16 @@ a {
     margin-top: 10px;
     margin-right: 10px;
 }
+
+.figure {
+    margin: 50px;
+    padding: 10px;
+    font-style: italic;
+    text-align: center;
+    color: #333;
+}
+
+.figure img {
+    max-height: 400px;
+}
+
