--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -128,7 +128,46 @@ a {
     color: #333;
 }
 
+.smallphoto {
+    cursor: pointer;
+    border: 2px solid rgba(0, 0, 0, 0);
+}
+
+.smallphoto:hover {
+    border: 2px solid #25f;
+}
+
 .figure img {
     max-height: 400px;
 }
 
+
+/* 
+ * ----------------------------------------------------------------------------
+ * Photo Overlay 
+ * ----------------------------------------------------------------------------
+ */
+
+#photo-overlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+#photo-overlay img {
+    margin: 10px;
+    max-height: 90%;
+}
+
+.overlay-text {
+    background-color: #fff;
+    padding: 5px;
+    border-radius: 3px;
+    width: 400px;
+    margin: auto;
+    margin-top: 10px;
+}
