--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -46,6 +46,20 @@ a {
     font-weight: normal;
 }
 
+.footer {
+    max-width: 800px;
+    margin: auto;
+    margin-top: 25px;
+    font-size: 9pt;
+    color: #999;
+    text-align: right;
+    padding: 15px;
+}
+
+.footer p:hover {
+    color: #000;
+}
+
 /* 
  * ----------------------------------------------------------------------------
  * Nav 
@@ -68,6 +82,7 @@ a {
     color: #263238;
     border-right: 1px solid #ccc;
     float: left;
+    text-shadow: 1px 1px 1px #999;
 }
 
 .nav-item:hover {
@@ -127,12 +142,10 @@ a {
 
 .figure {
     margin: 2.5%;
-    margin-bottom: 50px;
     padding: 10px;
     font-style: italic;
     text-align: center;
     color: #333;
-    height: 400px;
 }
 
 .smallphoto {
@@ -145,8 +158,7 @@ a {
 }
 
 .figure img {
-    max-width: 100%;
-    max-height: 100%;
+    max-height: 400px; 
 }
 
 .breadcrumbs {
